--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5ygajHERQAIvtDwiDXpVCDjEGFIiT4Hw"
   type="text/javascript"></script>
-    <title>React App</title>
+    <title>SF Transit Tracker</title>
   </head>
   <body>
     <noscript>
